--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -559,7 +559,7 @@ header {
   }
 
   .navbar-brand {
-    width: 380px !important;
+    // width: 380px !important;
   }
   .offcanvas {
     padding: 0;
