--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -548,6 +548,12 @@ header {
     width: 8px;
   }
 
+  .flight-path {
+    max-width: 300px;
+    margin: 0 auto;
+    display: block;
+  }
+  
   .offcanvas-body::-webkit-scrollbar-track {
     background: #ffff;
     // border-radius: 10px;
@@ -1157,3 +1163,5 @@ body.arabicVersion .phone {
   // transform: translate(-18%, -6%);
   z-index: -1;
 }
+
+
