--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,7 +561,7 @@ body.arabicVersion .whats-app {
   cursor: pointer !important;
 }
 
-@media (min-width: 375px) and (max-width: 991px) {
+@media (max-width: 991px) {
   .offcanvas-body::-webkit-scrollbar {
     width: 8px;
   }
@@ -1072,7 +1072,7 @@ body.arabicVersion .my-section .dir {
 }
 
 .about-pg .about-img {
-  width: 120px;
+  width: 100%;
   height: 300px;
 }
 
